Completed the adaptability of the caps and fixed bugs with jumps

--- a/style.css
+++ b/style.css
@@ -42,13 +42,44 @@ nav {
     padding: 12px 16px;
     font-size: 14px;
     font-weight: bold;
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
 }
 
-.topnav a:hover {
-    position: relative;
-   border-bottom: 3px solid #fcac45; 
-   z-index: 3;
+.topnav a::before {
+    display: block;
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 0;
+    background: #fcac45;
+    transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+    left: 50%;
+    bottom: 0;
 }
+
+.topnav a::after {
+    display: block;
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 0;
+    background-color: #fcac45;
+    transition: width 0.3s ease-in-out;
+    left: 50%;
+    bottom: 0;
+}
+
+.topnav a:hover::before{
+    width: 50%;
+    left: 0;
+}
+
+.topnav a:hover::after{
+     width: 50%;
+}
+
 
 .topnav .icon {
     display: none;
@@ -104,6 +135,44 @@ main .main_welcome h1{
 @media screen and (max-width: 1100px) {
     nav {
         margin-left: 5%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    nav {
+        margin-left: 5%;
+    }
+    .topnav a.icon{
+        float: right;
+        margin-top: -17px;
+        display: block;
+        color: #fff;
+        font-size: 25px;
+    }
+    .topnav.responsive a.icon {
+        position: absolute;
+        top: -50px;
+        right: -200px;
+        margin-right: 10%;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    nav {
+        margin-left: 5%;
+    }
+    .topnav a.icon{
+        float: right;
+        margin-top: -17px;
+        display: block;
+        color: #fff;
+        font-size: 25px;
+    }
+    .topnav.responsive a.icon {
+        position: absolute;
+        top: -50px;
+        right: -200px;
+        margin-right: 21%;
     }
 }
 
